--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -17,7 +17,7 @@
 		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>com.sun.jersey.config.property.packages</param-name>
-			<param-value>turnos</param-value>
+			<param-value>turnos.service</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
