--- a/pom.xml
+++ b/pom.xml
@@ -51,5 +51,10 @@
 	    <artifactId>gson</artifactId>
 	    <version>2.3.1</version>
 	</dependency>
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-core</artifactId>
+		<version>5.0.6.Final</version>
+	</dependency>
   </dependencies>
 </project>
