--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,15 @@
 		<artifactId>persistence-api</artifactId>
 		<version>1.0</version>
 	</dependency>
-	
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-entitymanager</artifactId>
+		<version>5.0.1.Final</version>
+	</dependency>
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.38</version>
+	</dependency>	
   </dependencies>
 </project>
